--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,2 +1,16 @@
 server:
  port: 9191
+spring:
+ application:
+  name: API-GATEWAY
+ config:
+  import: optional:configserver:http://localhost:8111 
+eureka:
+ instance:
+  client:
+   serviceUrl:
+    defaultZone: http://localhost:8761/eureka/ 
+management:
+ endpoints: 
+  web.exposure:
+   include: "*"    
